Fixed main element overflow issue

--- a/src/sections/Blog__MainNews/MainNews.scss
+++ b/src/sections/Blog__MainNews/MainNews.scss
@@ -1,7 +1,8 @@
 .main-news {
-	width: 2 /3 * 100%;
+	width: 65.834%;
 	background-color: #fff;
 	padding: 1.5rem 3%;
+	box-sizing: border-box;
 }
 
 .lastest-news {
